[project]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis",email = "dzianis.denis.work@gmail.com"}
]
requires-python = "==3.10.12"
dependencies = [
    "aio-pika (>=9.6.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
