[project]
name = "bet-maker"
version = "0.1.0"
description = ""
authors = [
    {name = "Denis", email = "dzianis.denis.work@gmail.com"}
]
requires-python = "^3.10.12"
dependencies = [
    "aio-pika (==9.6.2)",
    "sqlalchemy (==2.0.50)",
    "aiormq (==6.9.4)",
    "annotated-doc (==0.0.4)",
    "annotated-types (==0.7.0)",
    "anyio (==4.13.0)",
    "certifi (==2026.5.20)",
    "click (==8.4.1)",
    "detect-installer (==0.1.0)",
    "dnspython (==2.8.0)",
    "email-validator (==2.3.0)",
    "exceptiongroup (==1.3.1)",
    "fastapi (==0.136.1)",
    "fastapi-cli (==0.0.24)",
    "fastapi-cloud-cli (==0.18.0)",
    "fastar (==0.11.0)",
    "greenlet (==3.5.1)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httptools (==0.7.1)",
    "httpx (==0.28.1)",
    "idna (==3.16)",
    "jinja2 (==3.1.6)",
    "markdown-it-py (==4.2.0)",
    "markupsafe (==3.0.3)",
    "mdurl (==0.1.2)",
    "multidict (==6.7.1)",
    "pamqp (==3.3.0)",
    "propcache (==0.5.2)",
    "pydantic (==2.13.4)",
    "pydantic-extra-types (==2.11.1)",
    "pydantic-settings (==2.14.1)",
    "pydantic-core (==2.46.4)",
    "pygments (==2.20.0)",
    "python-dotenv (==1.2.2)",
    "python-multipart (==0.0.29)",
    "pyyaml (==6.0.3)",
    "rich (==15.0.0)",
    "rich-toolkit (==0.19.10)",
    "rignore (==0.7.6)",
    "sentry-sdk (==2.60.0)",
    "shellingham (==1.5.4)",
    "starlette (==1.0.1)",
    "tomli (==2.4.1)",
    "typer (==0.25.1)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.7.0)",
    "uvicorn (==0.47.0)",
    "uvloop (==0.22.1)",
    "watchfiles (==1.2.0)",
    "websockets (==16.0)",
    "yarl (==1.24.2)",
    "alembic (==1.18.4)",
    "mako (==1.3.12)",
    "asyncpg (==0.31.0)",
    "async-timeout (==5.0.1)",
    "pytest (==9.0.3)",
    "iniconfig (==2.3.0)",
    "packaging (==26.2)",
    "pluggy (==1.6.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "black (>=26.5.1,<27.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]
